1.4/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
