1.4/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
