1.4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc-nodeport
spec:
  selector:
    app: nginx-multitool
  type: NodePort
  ports:
    - name: nginx
      protocol: TCP
      port: 80
    - name: multitool
      protocol: TCP
      port: 8080
